@@ -7,6 +7,7 @@
 	mod_perl 2. No workaround is known.
    6. Fixed text status code associated with 302 redirects. Should be "Found"
 	but was "Moved".
+   7. Fixed charset in start_html() and header() to be in synch.
 
   Version 3.15 Wed Dec  7 15:13:22 EST 2005
    1. Remove extraneous "?" from self_url() when URI contains a ? but no query string.
